WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220647
CRASH in MediaSourcePrivateAVFObjC::removeSourceBuffer()
https://bugs.webkit.org/show_bug.cgi?id=220647
Summary
CRASH in MediaSourcePrivateAVFObjC::removeSourceBuffer()
Jer Noble
Reported
2021-01-14 23:46:52 PST
CRASH in MediaSourcePrivateAVFObjC::removeSourceBuffer()
Attachments
Patch
(9.15 KB, patch)
2021-01-14 23:51 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-01-14 23:47:29 PST
<
rdar://73173684
>
Jer Noble
Comment 2
2021-01-14 23:51:20 PST
Created
attachment 417679
[details]
Patch
EWS
Comment 3
2021-01-15 12:43:17 PST
Committed
r271530
: <
https://trac.webkit.org/changeset/271530
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417679
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug