Cherry-pick r271530. rdar://problem/73478410

CRASH in MediaSourcePrivateAVFObjC::removeSourceBuffer()
    https://bugs.webkit.org/show_bug.cgi?id=220647
    <rdar://73173684>

    Reviewed by Darin Adler.

    In exceptional circumstances, the MediaPlayerPrivateMediaSourceAVFObjC can be destroyed before
    MediaSourcePrivateAVFObjC, which leaves behind a null WeakPtr. Null check m_player before
    using everywhere in MediaSourcePrivateAVFObjC.

    Drive-by fix: it would be invalid to pass in a null player to MediaSourcePrivateAVFObjC::create(),
    so modify that method to take a reference rather than a pointer.

    * platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::load):
    * platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.h:
    * platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.mm:
    (WebCore::MediaSourcePrivateAVFObjC::create):
    (WebCore::MediaSourcePrivateAVFObjC::MediaSourcePrivateAVFObjC):
    (WebCore::MediaSourcePrivateAVFObjC::removeSourceBuffer):
    (WebCore::MediaSourcePrivateAVFObjC::durationChanged):
    (WebCore::MediaSourcePrivateAVFObjC::markEndOfStream):
    (WebCore::MediaSourcePrivateAVFObjC::readyState const):
    (WebCore::MediaSourcePrivateAVFObjC::setReadyState):
    (WebCore::MediaSourcePrivateAVFObjC::waitForSeekCompleted):
    (WebCore::MediaSourcePrivateAVFObjC::seekCompleted):
    (WebCore::MediaSourcePrivateAVFObjC::currentMediaTime const):
    (WebCore::MediaSourcePrivateAVFObjC::sourceBufferPrivateDidChangeActiveState):
    (WebCore::MediaSourcePrivateAVFObjC::sourceBufferKeyNeeded):
    (WebCore::MediaSourcePrivateAVFObjC::setSourceBufferWithSelectedVideo):

    Canonical link: https://commits.webkit.org/233078@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271530 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.45@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@271847 268f45cc-cd09-0410-ab3c-d52691b4dbfc